--- a/administracao/templates/administracao/emails_projetos.html
+++ b/administracao/templates/administracao/emails_projetos.html
@@ -11,8 +11,20 @@
 {% endblock %}
 
 {% block content %}
+
+  {% comment %} Removendo nomes dos e-mails devido a limitações do Outlook. {% endcomment %}
+
   <div id="projetos" class="input-group-append">
     {% for projeto in projetos %}
+      <a onclick="event.preventDefault(); myfunc($(this));"
+        data-estudantes='{% for alocacao in projeto.alocacao_set.all %}{{alocacao.aluno.user.email|parse_quote}},{% endfor %}'
+        data-orientador='{{ projeto.orientador.user.email|parse_quote }}'
+        data-conexoes='{% for pessoa in projeto.conexao_set.all %}{{ pessoa.parceiro.user.email|parse_quote }},{% endfor %}'
+        data-projeto='{{projeto}}'
+        data-avancado='{% if projeto.avancado %}true{% else %}false{% endif %}'
+        data-toggle="tooltip" data-html="true" animation="true" title="{{projeto}}"
+      >
+      {% comment %}
       <a onclick="event.preventDefault(); myfunc($(this));"
         data-estudantes='{% for alocacao in projeto.alocacao_set.all %}{{alocacao.aluno.user.first_name|parse_quote}}%20{{alocacao.aluno.user.last_name|parse_quote}}%20&lt;{{alocacao.aluno.user.email|parse_quote}}&gt;,{% endfor %}'
         data-orientador='{{projeto.orientador.user.first_name|parse_quote}}%20{{projeto.orientador.user.last_name|parse_quote}}%20&lt;{{ projeto.orientador.user.email|parse_quote }}&gt;,'
@@ -21,6 +33,7 @@
         data-avancado='{% if projeto.avancado %}true{% else %}false{% endif %}'
         data-toggle="tooltip" data-html="true" animation="true" title="{{projeto}}"
       >
+      {% endcomment %}
         <button class="btn btn-outline-secondary btn-sm ml-1" type="button">
           p{{projeto.pk}}
         </button>
