melhor texto da mensagem

--- a/organizacoes/templates/organizacoes/proposta_submissao.html
+++ b/organizacoes/templates/organizacoes/proposta_submissao.html
@@ -175,7 +175,7 @@
     {% if not liberadas_propostas %}
       {% if vencida %}
         <spam class="red-bold">Essa proposta foi submetida em um semestre anterior,
-        ao salvar, você gerará uma nova proposta para o semestre atual.<br></spam>
+        ao salvar, você gerará uma nova proposta para ser apresentada agora para os estudantes.<br></spam>
         <input type="submit" value="Nova Proposta de Projeto ">
       {% elif edicao %}
         <input type="submit" value="Atualizar Proposta de Projeto">
