--- a/templates/annotation-modal.html
+++ b/templates/annotation-modal.html
@@ -87,7 +87,6 @@
 
 
 
-
 <!-- Modal -->
 <div class="modal fade" id="popup" role="dialog">
   <div class="modal-dialog modal-lg" role="document">
@@ -127,13 +126,30 @@
         success: function(response){
             if (response.atualizado) {
               console.log("Valor atualizado.");
+              $("#data"+organizacao).text(response.data);
+              $("#organizacao"+organizacao).data("anotacao", response.anotacao_id);
+              $("#organizacao"+organizacao).text(texto);
+              if(tipo_de_retorno == 0)
+                $("#tr"+organizacao).css("background-color", "lightblue");
+              else if(tipo_de_retorno == 1)
+                $("#tr"+organizacao).css("background-color", "lightgreen");
+              else if(tipo_de_retorno == 2)
+                $("#tr"+organizacao).css("background-color", "lemonchiffon");
+              else if(tipo_de_retorno == 3)
+                $("#tr"+organizacao).css("background-color", "pink");
+              else if(tipo_de_retorno == 4)
+                $("#tr"+organizacao).css("background-color", "yellow");
+              else if(tipo_de_retorno == 5)
+                $("#tr"+organizacao).css("background-color", "#e289df");
+              else if(tipo_de_retorno == 6)
+                $("#tr"+organizacao).css("background-color", "green");
+              else if(tipo_de_retorno == 7)
+                $("#tr"+organizacao).css("background-color", "lightyellow");
+
             } else {
               console.log("Valor não atualizado.");
             }
 
-            $("#data"+organizacao).text(response.data);
-            $("#organizacao"+organizacao).data("anotacao", response.anotacao_id);
-            $("#organizacao"+organizacao).text(texto);
         },
         error: function(response) {
             console.log('error')
