--- a/users/templates/users/parceiro_detail.html
+++ b/users/templates/users/parceiro_detail.html
@@ -104,7 +104,8 @@
   {% if user.tipo_de_usuario == 4 %}
     <a href="{% url 'edita_usuario' parceiro.user.id %}">
       <button style="float: right;">Editar</button>
-    </a>  {% endif %}
+    </a>
+  {% endif %}
   <p>&nbsp;</p>
   
 {% endblock %}
