controle de Atas do Comitê

--- a/documentos/templates/documentos/tabela_documentos.html
+++ b/documentos/templates/documentos/tabela_documentos.html
@@ -18,7 +18,7 @@
 
 {% block content %}
 
-  <span class="titulo">Documentação dos Projetos Fechados</span>
+  <span class="titulo">Documentação dos Projetos</span>
 
   {% if projetos %}
     <table id="ProjetosTable">
