--- a/professores/templates/professores/index_professor.html
+++ b/professores/templates/professores/index_professor.html
@@ -31,6 +31,7 @@
 
     <h5>Avaliações</h5>
     <ul>
+        <a href="{% url 'objetivos_rubricas' %}"><li>Objetivos de Aprendizado e Rubricas</li></a>
         <a href="{% url 'resultado_bancas' %}"><li>Resultado Bancas</li></a>
         <a href="{% url 'analise_notas' %}"><li>Análise por Notas/Conceitos</li></a>
         <a href="{% url 'evolucao_notas' %}"><li>Evolução por Notas/Conceitos</li></a>
